--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,17 @@ compile_commands.json
 CTestTestfile.cmake
 build
 _deps
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+.vscode/settings.json
