--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,8 @@ project(server-cpp)
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 11)
 
-# Add all source files and headers in src and src/utils
-file(GLOB_RECURSE SOURCES src/*.cpp src/utils/*.cpp main.cpp)
-file(GLOB_RECURSE HEADERS src/*.h src/utils/*.h)
+## Use file globbing to find all source files in the src directory
+file(GLOB SOURCES "src/*.cpp" "src/utils/*.cpp" "src/utils/*.h")
 
-# Create the executable
-add_executable(server-cpp ${SOURCES} ${HEADERS})
+# Add your source files here
+add_executable(server-cpp ${SOURCES})
